styled blog posts and added images

--- a/index.html
+++ b/index.html
@@ -5,26 +5,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Anek+Bangla:wght@100..800&family=Exo+2:ital,wght@0,100..900;1,100..900&family=Roboto+Flex:opsz,wght@8..144,100..1000&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Anek+Bangla:wght@100..800&family=Exo+2:ital,wght@0,100..900;1,100..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Roboto+Flex:opsz,wght@8..144,100..1000&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Anek+Bangla:wght@100..800&family=Anek+Kannada:wght@100..800&family=Exo+2:ital,wght@0,100..900;1,100..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Roboto+Flex:opsz,wght@8..144,100..1000&display=swap');
+    </style>
 </head>
 <body>
     <header>
     <!-- <h1>Portfolio</h1> -->
     <nav>
-        <a href="/index.html">Home</a>
-        <a href="/about.html">About</a>
-        <a href="/skills.html">Skills</a>
-        <a href="/projects.html">Projects</a>
-        <a href="/contact.html">Contact</a>
+        <a class="link" href="/index.html">Home</a>
+        <a class="link" href="/about.html">About</a>
+        <a class="link" href="/projects.html">Projects</a>
+        <a class="link" href="/skills.html">Resume</a>
+        <a class="link" href="/contact.html">Contact</a>
     </nav>
-    </header>
+    </header> 
     <main>
         <img src="images/1517064539613.jpeg" alt="photo picture of Thomas Martin">
-        <h2>Thomas Martin</h2>
-        <p>Aspiring junior full stack developer and designer currently studying at Coder Academy.</p>
+        <p>Hi, I'm...</p>
+        <h1>Tom Martin.</h1>
+        <p>An aspiring full stack developer and designer living in Adelaide, Australia.</p>
+    <div>
+        <button class="button"><a href="projects.html">Check out my work!</a></button>
+    </div>
+    <div>
+        <a href="https://www.linkedin.com/in/thomas-martin-9b24a4103" target="blank"><img class="linkedin" src="https://upload.wikimedia.org/wikipedia/commons/c/ca/LinkedIn_logo_initials.png" alt="linked in logo"></a>
+    </div>
     </main>
     <footer>
         <p>
-            &copy;
+            Thanks for visiting!
         </p>
     </footer>
 </body>
