--- a/about.html
+++ b/about.html
@@ -25,11 +25,11 @@
     <main>
         <h1>About Me</h1>
     <section class="aboutmepara">
-        <p>Tom Martin is an enthusiastic, positive, and passionate person who enjoys communicating and working on common goals with likeminded people. He has an eye for detail, is a logical thinker and a hard worker. With a background in marketing and design, he now plans to use his current skillset, along with his recent education and experience in full stack development to embark on a new career... and ultimately soon become a professional within the development industry.</p>
+        <p>Tom Martin is an enthusiastic, positive, and passionate person who enjoys communicating and working on common goals with likeminded people. He has an eye for detail, is a logical thinker and, a hard worker. With a bachelor degree in marketing, and a diploma in visual design, he now plans to use his current skillset, along with his recent education and experience in full stack development, to embark on a new career path... with goals of soon becoming a professional within the industry.</p>
 
-        <p>Whatever it is that Tom puts his mind to he achieves, not because he is a genius, but because he does not accept no for an answer. He is highly self motivated and is prepared to do whatever it takes to achieve his goals. This can be seen in his music career, where he struggled for the first few years because he had limited technological experience, but where many would have given up, he persevered. Now, thirteen years since beginning this journey, he has released seventeen vinyl records on record labels from all over the world. He has collaborated with some of his biggest inspirations and has started his very own record label. These achievements have also allowed Tom to play sold-out shows Australia wide.</p>  
+        <p>Whatever it is that Tom puts his mind to he achieves, not because he is a genius, but because he does not accept no for an answer. He is highly self motivated and is prepared to do whatever it takes to achieve his goals. This is evident in his music production career, where he struggled for the first few years because he had limited technological experience, but where many would have given up, he persevered. Now, thirteen years on, he has released seventeen vinyl records on record labels from all over the world. He has collaborated with some of his biggest inspirations and has started his very own record label. These achievements have also allowed Tom to play sold-out shows Australia wide.</p>  
         
-        <p>Tom is now wanting to turn put this same passion and commitment into a career where he can grow professionally, develope new innovations and meet interesting people.</p> 
+        <p>Tom is now wanting to turn put this same passion and commitment into a career where he can grow professionally, while developing new innovative technology and relationships with his peers.</p> 
     </p>
     </section>
     </main>
