--- a/blog.html
+++ b/blog.html
@@ -31,7 +31,7 @@
             <h3>Music Production</h3>
             <a href="musicproduction.html"><img class="blogimg" src="images/Ahora art.jpeg" alt="Picture of Ahora Si cover" width="100dvw"></a>
             <p>
-            From an early age, a strong love of most genres of music paved the way for over a decade long journey into music production. During this time, I was fortunate enough to collaborate with some life-long inspirations from around the globe, and release music on a variety of my favourite local and international record labels. 
+            <!-- From an early age, a strong love of most genres of music paved the way for over a decade long journey into music production. During this time, I was fortunate enough to collaborate with some life-long inspirations from around the globe, and release music on a variety of my favourite local and international record labels.  -->
             </p>
             <p><em>Published 20th March '24</em></p>
             <a class="button" href="musicproduction.html">Read More</a>
@@ -40,7 +40,7 @@
             <h3>Record Label</h3>
             <a href="recordlabel.html"><img class="blogimg" src="images/MD.jpeg" alt="Picture of Ahora Si cover" width="100dvw"></a>
             <p>
-            After producing music for seven years, a desire to be in control of the creative process from start to finish was realised. This led to starting my own record label. With the help of two europe based distrobution companies, the label has now released ten vinyl records by local and international artists and is stocked all over the world.   
+            <!-- After producing music for seven years, a desire to be in control of the creative process from start to finish was realised. This led to starting my own record label. With the help of two europe based distrobution companies, the label has now released ten vinyl records by local and international artists and is stocked all over the world.    -->
             </p>
             <p><em>Published 21th March '24</em></p>
             <a class="button" href="recordlabel.html">Read More</a>
@@ -49,7 +49,7 @@
             <h3>Design</h3>
             <a href="design.html"><img class="blogimg" src="images/5847e949cef1014c0b5e4820.png" alt="Picture of Ahora Si cover" width="100dvw"></a>
             <p>
-                Since I can remember, different modes of design have always been a prominent part of my life. Put simply, I love it. It started when I was a child, and my dream job was to be an architect, making Lego and cardboard box arcades and hotels for fun. This was succeeded by product and furniture design - with a strong fascination on sneaker design, and my year 12 final design piece. Since I have been working with many different designers regularly on projects such as event posters, record designs, clothing and more.
+                <!-- Since I can remember, different modes of design have always been a prominent part of my life. Put simply, I love it. It started when I was a child, and my dream job was to be an architect, making Lego and cardboard box arcades and hotels for fun. This was succeeded by product and furniture design - with a strong fascination on sneaker design, and my year 12 final design piece. Since I have been working with many different designers regularly on projects such as event posters, record designs, clothing and more. -->
             </p>
             <p><em>Published 21th March '24</em></p>
             <a class="button" href="recordlabel.html">Read More</a>
@@ -58,7 +58,7 @@
             <h3>Gardening</h3>
             <a href="gardening.html"><img class="blogimg" src="images/vecteezy_green-leaf-logo_6954129.jpg" alt="Picture of Ahora Si cover" width="100dvw"></a>
             <p>
-            A love of gardening was inlfuenced by my mother at an early age, whilst growing up in the Adelaide Hills, where I always had a vegetable garden. This has developed into a passion for Australian native varieties and organically grown fruit and vegetables, contributing to sustainability. 
+            <!-- A love of gardening was inlfuenced by my mother at an early age, whilst growing up in the Adelaide Hills, where I always had a vegetable garden. This has developed into a passion for Australian native varieties and organically grown fruit and vegetables, contributing to sustainability.  -->
             </p>
             <p><em>Published 22th March '24</em></p>
             <a class="button" href="gardening.html">Read More</a>
@@ -67,7 +67,7 @@
             <h3>Cooking</h3>
             <a href="cooking.html"><img class="blogimg" src="images/vecteezy_chef-logo-with-hat-vector-design_7497962.jpg" alt="Picture of Ahora Si cover" width="100dvw"></a>
             <p>
-                Since Covid struck, my skills in the kitchen have definitely improved, and so has my enjoyment and passion for finding new recipes. Initially, I look for what produce in the garden is ready to consume, then jump on the computer to find recipes that include as many of the ingredients as possible. This is a fantastic way to save money, discover new recipes and avoid food wastage. Using this method I have stumbled across some excellent recipes, that I will definitely be making next season!    
+                <!-- Since Covid struck, my skills in the kitchen have definitely improved, and so has my enjoyment and passion for finding new recipes. Initially, I look for what produce in the garden is ready to consume, then jump on the computer to find recipes that include as many of the ingredients as possible. This is a fantastic way to save money, discover new recipes and avoid food wastage. Using this method I have stumbled across some excellent recipes, that I will definitely be making next season!     -->
             </p>
             <p><em>Published 22th March '24</em></p>
             <a class="button" href="cooking.html">Read More</a>
