--- a/index.html
+++ b/index.html
@@ -10,33 +10,36 @@
         @import url('https://fonts.googleapis.com/css2?family=Anek+Bangla:wght@100..800&family=Exo+2:ital,wght@0,100..900;1,100..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Roboto+Flex:opsz,wght@8..144,100..1000&display=swap');
         @import url('https://fonts.googleapis.com/css2?family=Anek+Bangla:wght@100..800&family=Anek+Kannada:wght@100..800&family=Exo+2:ital,wght@0,100..900;1,100..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Roboto+Flex:opsz,wght@8..144,100..1000&display=swap');
     </style>
+    <link rel="icon" type="image/png" href="images/TM.png">
 </head>
 <body>
     <header>
     <!-- <h1>Portfolio</h1> -->
     <nav>
-        <a class="link" href="/index.html">Home</a>
+        <a class="link" style="color:#7A75FF" href="/index.html">Home</a>
         <a class="link" href="/about.html">About</a>
+        <a class="link" href="/skills.html">Skills</a>
         <a class="link" href="/projects.html">Projects</a>
-        <a class="link" href="/skills.html">Resume</a>
+        <a class="link" href="/blog.html">Blog</a>
         <a class="link" href="/contact.html">Contact</a>
     </nav>
     </header> 
     <main>
         <img src="images/1517064539613.jpeg" alt="photo picture of Thomas Martin">
-        <p>Hi, I'm...</p>
+        <p><em>Hi, I'm...</em></p>
         <h1>Tom Martin.</h1>
-        <p>An aspiring full stack developer and designer living in Adelaide, Australia.</p>
-    <div>
-        <button class="button"><a href="projects.html">Check out my work!</a></button>
+        <p><em>An aspiring full stack developer and designer living in Adelaide, Australia.</em></p>
+    <div class="examplebutton">
+        <a class="button" href="projects.html">Examples of my work!</a>
     </div>
-    <div>
-        <a href="https://www.linkedin.com/in/thomas-martin-9b24a4103" target="blank"><img class="linkedin" src="https://upload.wikimedia.org/wikipedia/commons/c/ca/LinkedIn_logo_initials.png" alt="linked in logo"></a>
+    <div class="contactlogo">
+        <a href="https://www.linkedin.com/in/tom-martin-9b24a4103/" target="blank"><img class="linkedin" src="https://upload.wikimedia.org/wikipedia/commons/c/ca/LinkedIn_logo_initials.png" alt="linked in logo"></a>
+        <a href="https://github.com/TommyMart" target="blank"><img class="linkedin" src="images/github-logo-label-text-symbol-transparent-png-2425199.png" alt="Git Hub logo"></a>
     </div>
     </main>
     <footer>
-        <p>
-            Thanks for visiting!
+        <p id="footer">
+            Thanks for visiting
         </p>
     </footer>
 </body>
