--- a/skills.html
+++ b/skills.html
@@ -5,24 +5,92 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Anek+Bangla:wght@100..800&family=Exo+2:ital,wght@0,100..900;1,100..900&family=Roboto+Flex:opsz,wght@8..144,100..1000&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Anek+Bangla:wght@100..800&family=Exo+2:ital,wght@0,100..900;1,100..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Roboto+Flex:opsz,wght@8..144,100..1000&display=swap');
+    </style>
+    <link rel="icon" type="image/png" href="images/TM.png">
 </head>
 <body>
     <header>
-    <h1>Portfolio</h1>
+    <!-- <h1>Portfolio</h1> -->
     <nav>
-        <a href="/index.html">Home</a>
-        <a href="/about.html">About</a>
-        <a href="/skills.html">Skills</a>
-        <a href="/projects.html">Projects</a>
-        <a href="/contact.html">Contact</a>
+        <a class="link" href="/index.html">Home</a>
+        <a class="link" href="/about.html">About</a>
+        <a class="link" style="color:#7A75FF" href="/skills.html">Skills</a>
+        <a class="link" href="/projects.html">Projects</a>
+        <a class="link" href="/blog.html">Blog</a>
+        <a class="link" href="/contact.html">Contact</a>
     </nav>
-    </header>
+    </header> 
     <main>
-
+    <h1 class="navheading">Skills</h1>
+        <section class="skills">
+            <section class="skillbox">
+                
+                <ul class="skilllist">
+                    <h2 class="itlist">Development</h2>
+                    <li>HTML & CSS</li>
+                    <li>Python</ls>
+                    <li>Flask</ls>
+                    <li>Javascript</li>
+                    <li>Bootstrap</li>
+                    <li>React</li>
+                    <li>NodeJS</li>
+                    <li>MongoDB</li>
+                    <li>SQL Databases</li>
+                    <li>Git Hub</li>
+                    <li>Scrum & Kanban</li>
+                </ul>
+            </section>
+            <section class="skillbox">
+                    <ul class="skilllist">
+                        <h2 class="itlist">Graphic Design</h2>
+                        <li>Adobe Photoshop</li>
+                        <li>Adobe Illustrator</ls>
+                        <li>Adobe XD</ls>
+                        <li>Figma</li>
+                        <li>UI/UX Design</li>
+                        <li>Prototyping</li>
+                        <li>Wireframes</li>
+                        <li>Frame Annimations</li>
+                    </ul>
+                </section>
+                <section class="skillbox">
+                    <ul class="skilllist">
+                        <h2 class="itlist">Marketing</h2>
+                        <li>Digital Marketing</li>
+                        <li>Google Adds</li>
+                        <li>Social Media Management</li>
+                        <li>Brand Identity</li>
+                        <li>Content Creation</li>
+                    </ul>
+                </section>
+                <section class="skillbox">
+                    <ul class="skilllist">
+                        <h2 class="itlist">Soft Skills</h2>
+                        <li>Creative Thinker</li>
+                        <li>Logical Thinker</li>
+                        <li>Communication</li>
+                        <li>Rapport Building</li>
+                        <li>Hard Working</li>
+                        <li>Passionate</li>
+                        <li>Enthusiastic</li>
+                        <li>Self Motivated</li>
+                        <li>Decision Maker</li>
+                        <li>Honest</li>
+                        <li>Respectful</li>
+                    </ul>
+                </section>
+        </section>
+    <section class="resume">
+    <a class="button" href="images/Tom Martin.pdf" 
+    target="blank">View Resume Here</a>
+    </section>
     </main>
-    <footer>
+    <footer id="footer">
         <p>
-            &copy;
+            Thanks for visiting
         </p>
     </footer>
 </body>
