--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
     <!-- <h1>Portfolio</h1> -->
     <nav>
         <a class="link" style="color:#7A75FF" href="/index.html">Home</a>
-        <a class="link" href="about.html">About</a>
-        <a class="link" href="skills.html">Skills</a>
-        <a class="link" href="projects.html">Projects</a>
-        <a class="link" href="blog.html">Blog</a>
-        <a class="link" href="contact.html">Contact</a>
+        <a class="link" href="./about.html">About</a>
+        <a class="link" href="./skills.html">Skills</a>
+        <a class="link" href="./projects.html">Projects</a>
+        <a class="link" href="./blog.html">Blog</a>
+        <a class="link" href="./contact.html">Contact</a>
     </nav>
     </header> 
     <main>
