--- a/design.html
+++ b/design.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>Tom Martin Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Anek+Bangla:wght@100..800&family=Exo+2:ital,wght@0,100..900;1,100..900&family=Roboto+Flex:opsz,wght@8..144,100..1000&display=swap');
@@ -15,28 +15,27 @@
     <header>
     <!-- <h1>Portfolio</h1> -->
     <nav>
-        <a class="link" href="/index.html">Home</a>
-        <a class="link" href="/about.html">About</a>
-        <a class="link" href="/skills.html">Skills</a>
-        <a class="link" href="/projects.html">Projects</a>
-        <a class="link" style="color:#7A75FF" href="/blog.html">Blog</a>
-        <a class="link" href="/contact.html">Contact</a>
+        <a class="link" href="index.html">Home</a>
+        <a class="link" href="about.html">About</a>
+        <a class="link" href="skills.html">Skills</a>
+        <a class="link" href="projects.html">Projects</a>
+        <a class="link" style="color:#7A75FF" href="blog.html">Blog</a>
+        <a class="link" href="contact.html">Contact</a>
     </nav>
     </header> 
     <main>
         <h1 class="navheading">Design</h1>
-        <p>Moon Juice logo design</p>
-        <img class="designimages" src="images/Screenshot 2024-03-10 at 10.00.53 am.png" alt="Tom in the garden with his mum" width="30%">
-        <p>Moon Juice product design</p>
-        <img class="designimages" src="images/Screenshot 2024-03-22 at 12.57.59 pm.png" alt="Tom in the garden with his mum" width="30%">
-        <p>Moon Juice product design</p>
         <img class="designimages" src="images/Screenshot 2024-03-22 at 12.57.47 pm.png" alt="Tom in the garden with his mum" width="30%">
-        <p>Moon Juice sign design</p>
-        <img class="designposter" src="images/Screenshot 2024-03-22 at 1.04.03 pm.png" alt="Tom in the garden with his mum" width="30%">
-        <p>Event poster design</p>
+        <p class="description"><em>Moon Juice logo and product design</em></p>
+        
         <img class="designposter" src="images/Screenshot 2024-03-22 at 1.07.09 pm.png" alt="Tom in the garden with his mum" width="30%">
+        <p class="description"><em>Event poster design</em></p>
     <section class="aboutmepara">
-        <p></p>
+        <p>Since I can remember, different modes of design have always been a prominent part of my life. Put simply, I enjoy all of it. It started when I was a child, and my dream job was to be an architect, making Lego and cardboard box arcades and hotels for fun. This was succeeded by product and furniture design - with a strong fascination on sneaker design - which was my year 12 final design project. Since then I have been working with many different designers regularly on projects such as event posters, record designs, clothing and more. 
+        </p>
+            <p>At the start of Covid, enough was enough, it was time to learn the tools needed to turn my own creative ideas into reality. This was achieved by studying an intensive foundations course at The Graphic Design School in Sydney. I enjoyed the experience so much that I have now almost completed a Diploma of Visual Design at The Adelaide College of the Arts. 
+            </p>
+            <p>I am now very much looking forward to implementing my design knowledge and skills into building interactive websites and applications that can assist humanity and the world in an engaging way.</p>
 
         <a class="button" href="blog.html">Return to blog</a> 
         
