--- a/blog.html
+++ b/blog.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>Tom Martin Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Anek+Bangla:wght@100..800&family=Exo+2:ital,wght@0,100..900;1,100..900&family=Roboto+Flex:opsz,wght@8..144,100..1000&display=swap');
@@ -15,12 +15,12 @@
     <header>
     <!-- <h1>Portfolio</h1> -->
     <nav>
-        <a class="link" href="/index.html">Home</a>
-        <a class="link" href="/about.html">About</a>
-        <a class="link" href="/skills.html">Skills</a>
-        <a class="link" href="/projects.html">Projects</a>
-        <a class="link" style="color:#7A75FF" href="/blog.html">Blog</a>
-        <a class="link" href="/contact.html">Contact</a>
+        <a class="link" href="index.html">Home</a>
+        <a class="link" href="about.html">About</a>
+        <a class="link" href="skills.html">Skills</a>
+        <a class="link" href="projects.html">Projects</a>
+        <a class="link" style="color:#7A75FF" href="blog.html">Blog</a>
+        <a class="link" href="contact.html">Contact</a>
     </nav>
     </header> 
     <main>
