changed spelling ingredients

--- a/cooking.html
+++ b/cooking.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>Tom Martin Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Anek+Bangla:wght@100..800&family=Exo+2:ital,wght@0,100..900;1,100..900&family=Roboto+Flex:opsz,wght@8..144,100..1000&display=swap');
@@ -15,19 +15,19 @@
     <header>
     <!-- <h1>Portfolio</h1> -->
     <nav>
-        <a class="link" href="/index.html">Home</a>
-        <a class="link" href="/about.html">About</a>
-        <a class="link" href="/skills.html">Skills</a>
-        <a class="link" href="/projects.html">Projects</a>
-        <a class="link" style="color:#7A75FF" href="/blog.html">Blog</a>
-        <a class="link" href="/contact.html">Contact</a>
+        <a class="link" href="index.html">Home</a>
+        <a class="link" href="about.html">About</a>
+        <a class="link" href="skills.html">Skills</a>
+        <a class="link" href="projects.html">Projects</a>
+        <a class="link" style="color:#7A75FF" href="blog.html">Blog</a>
+        <a class="link" href="contact.html">Contact</a>
     </nav>
     </header> 
     <main>
         <h1 class="navheading">Cooking</h1>
         <img class="blogimages" src="images/Screenshot 2024-03-23 at 12.42.48 pm.png" alt="picture of Thai curry">
     <section class="aboutmepara">
-        <p>Since Covid, my skills in the kitchen have definitely improved, and so has my enjoyment and passion for finding new recipes that include home grown produce. Initially, I look for what produce in the garden is ready to consume, then jump on the computer to find recipes that include as many of the ingridients as possible. This is a fantastic way to save money, discover new recipes and avoid food wastage. Using this method I have stumbled across some exceelent new recipes, that I will definitely be making next season!</p>
+        <p>Since Covid, my skills in the kitchen have definitely improved, and so has my enjoyment and passion for finding new recipes that include home grown produce. Initially, I look for what produce in the garden is ready to consume, then jump on the computer to find recipes that include as many of the ingredients as possible. This is a fantastic way to save money, discover new recipes and avoid food wastage. Using this method I have stumbled across some exceelent new recipes, that I will definitely be making next season!</p>
 
         <a class="button" href="blog.html">Return to blog</a> 
         
