--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>Tom Martin Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Anek+Bangla:wght@100..800&family=Exo+2:ital,wght@0,100..900;1,100..900&family=Roboto+Flex:opsz,wght@8..144,100..1000&display=swap');
@@ -15,12 +15,12 @@
     <header>
     <!-- <h1>Portfolio</h1> -->
     <nav>
-        <a class="link" href="/index.html">Home</a>
-        <a class="link" style="color:#7A75FF" href="/about.html">About</a>
-        <a class="link" href="/skills.html">Skills</a>
-        <a class="link" href="/projects.html">Projects</a>
-        <a class="link" href="/blog.html">Blog</a>
-        <a class="link" href="/contact.html">Contact</a>
+        <a class="link" href="index.html">Home</a>
+        <a class="link" style="color:#7A75FF" href="about.html">About</a>
+        <a class="link" href="skills.html">Skills</a>
+        <a class="link" href="projects.html">Projects</a>
+        <a class="link" href="blog.html">Blog</a>
+        <a class="link" href="contact.html">Contact</a>
     </nav>
     </header> 
     <main>
@@ -28,7 +28,7 @@
     <section class="aboutmepara">
         <p>Tom Martin is an enthusiastic, positive, and passionate person who enjoys communicating and working on common goals with likeminded people. He has an eye for detail, is a logical thinker and a hard worker. With a bachelor degree in marketing and a diploma in visual design, he now plans to use his current skillset, along with his recent education and experience in full stack web development he attained at Coder Academy, to embark on a new career path... with a short to mid term goal of becoming a professional within the industry.</p>
 
-        <p>Whatever it is that Tom puts his mind to he achieves, not because he is a genius, but because he hard working and does not give up. He is highly self motivated and is prepared to do whatever it takes to achieve his goals. This is evident in his music production journey, where he struggled grasping the basics for the first couple of years because he had limited technological experience, but where many would have given up, he persevered. Now, a decade later, he has released seventeen vinyl records on record labels from all over the world. He has collaborated with some of his biggest inspirations and has started his very own record label. These achievements have provided Tom with some fantastic opportunities, including playing sold-out shows Australia wide.</p>  
+        <p>Whatever it is that Tom puts his mind to he achieves, not because he is super human, but because he is hard working and does not give up. He is highly self motivated and is prepared to do whatever it takes to achieve his goals. This is evident in his music production journey, where he struggled grasping the basics for the first couple of years because he had limited technological experience, but where many would have given up, he persevered. Now, a decade later, he has released seventeen vinyl records on record labels from all over the world. He has collaborated with some of his biggest inspirations and has started his very own record label. These achievements have provided Tom with some fantastic opportunities, including playing sold-out shows Australia wide.</p>  
         
         <p>Tom is now wanting to turn this same passion and commitment into a career where he can grow professionally, while developing new innovative technologies that benefit the earth and all that live on it.</p> 
     </p>
