--- a/design.html
+++ b/design.html
@@ -31,11 +31,11 @@
         <img class="designposter" src="images/Screenshot 2024-03-22 at 1.07.09 pm.png" alt="Tom in the garden with his mum" width="30%">
         <p class="description"><em>Event poster design</em></p>
     <section class="aboutmepara">
-        <p>Since I can remember, different modes of design have always been a prominent part of my life. Put simply, I enjoy all of it. It started when I was a child, and my dream job was to be an architect, making Lego and cardboard box arcades and hotels for fun. This was succeeded by product and furniture design - with a strong fascination on sneaker design - which was my year 12 final design project. Since then I have been working with many different designers regularly on projects such as event posters, record designs, clothing and more. 
+        <p>Design has always been a big part of my life. It started when I was a child, and my dream job was to be an architect, making Lego and cardboard box arcades and hotels for fun. This was succeeded by product and furniture design - my year 12 final sneaker design project and favourite subject. Since then I have been working with many different designers regularly on projects such as event posters, record designs, clothing and more. 
         </p>
-            <p>At the start of Covid, enough was enough, it was time to learn the tools needed to turn my own creative ideas into reality. This was achieved by studying an intensive foundations course at The Graphic Design School in Sydney. I enjoyed the experience so much that I have now almost completed a Diploma of Visual Design at The Adelaide College of the Arts. 
+            <p>As Covid hit, and I moved back to my hometown of Adeliade, it was time to learn the tools needed to turn my own creative ideas into fruition. This was achieved by studying an intensive design foundations course at The Graphic Design School in Sydney, then a Diploma of Visual Design at The Adelaide College of the Arts. 
             </p>
-            <p>I am now very much looking forward to implementing my design knowledge and skills into building interactive websites and applications that can assist humanity and the world in an engaging way.</p>
+            <p>I am now very much looking forward to implementing my design knowledge and skills into building interactive websites and applications.</p>
 
         <a class="button" href="blog.html">Return to blog</a> 
         
