added new design images

--- a/design.html
+++ b/design.html
@@ -25,13 +25,16 @@
     </header> 
     <main>
         <h1 class="navheading">Design</h1>
-        <img class="designimages" src="images/Screenshot 2024-03-22 at 12.57.47 pm.png" alt="Tom in the garden with his mum" width="30%">
-        <p class="description"><em>Moon Juice logo and product design</em></p>
-        
-        <img class="designposter" src="images/Screenshot 2024-03-22 at 1.07.09 pm.png" alt="Tom in the garden with his mum" width="30%">
-        <p class="description"><em>Event poster design</em></p>
+        <img class="designimages" src="images/BerlinAntonalmock2-02.png" alt="Tom in the garden with his mum" width="30%">
+        <img class="designimages" src="images/BerlinAntonalmock1-01.png" alt="Tom in the garden with his mum" width="30%">
+        <!-- <img class="designposter" src="images/Screenshot 2024-03-22 at 1.07.09 pm.png" alt="Tom in the garden with his mum" width="30%"> -->
+        <p class="description"><em>Mock event poster design</em></p>
+        <img class="designcan" src="images/MJGuavacan-01.png" alt="Tom in the garden with his mum" width="20%">
+        <p class="description"><em>Mock logo and product design.</em></p>
+        <img class="lazydays" src="images/LAZYDAYSBOX1-01.png" alt="Tom in the garden with his mum" width="20%">
+        <p class="description"><em>Mock branding design.</em></p>
     <section class="aboutmepara">
-        <p>Design has always been a big part of my life. It started when I was a child, and my dream job was to be an architect, making Lego and cardboard box arcades and hotels for fun. This was succeeded by product and furniture design - my year 12 final sneaker design project and favourite subject. Since then I have been working with many different designers regularly on projects such as event posters, record designs, clothing and more. 
+        <p>Design has always been a big part of my life. It started when I was a child and my dream job was to be an architect, making Lego and cardboard box arcades and hotels for fun. This was succeeded by product and furniture design - consisting of my year 12 final sneaker design project and favourite subject. Since then I have been regulary working with different designers on collaborative projects such as event posters, record designs, clothing and more. 
         </p>
             <p>As Covid hit, and I moved back to my hometown of Adeliade, it was time to learn the tools needed to turn my own creative ideas into fruition. This was achieved by studying an intensive design foundations course at The Graphic Design School in Sydney, then a Diploma of Visual Design at The Adelaide College of the Arts. 
             </p>
